fixed menu icon alignment

--- a/assets/CSS/style-header.css
+++ b/assets/CSS/style-header.css
@@ -125,14 +125,13 @@ a:hover {
     display: flex;
     min-width: 50px;
     max-width: 50px;
-    margin-right: 40px;
-    position: fixed;
-    right: 0;
+    margin-right: 100px;
+    align-items: center;
   }
 
   .flex-mobile-button {
     order: 2;
-    margin-right: 50%;
+    align-items: center;
   }
 
   #mobile-hidden {
